# weaviate

./: .bazelrc  .gitignore  BUILD  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-weaviate
adapters/clients/: BUILD.bazel  replication_client.go  replication_client_test.go
adapters/handlers/graphql/: BUILD.bazel
adapters/handlers/rest/: BUILD.bazel
adapters/repos/classifications/: BUILD.bazel
adapters/repos/db/: BUILD.bazel  replication.go  shard_replication.go
adapters/repos/modules/: BUILD.bazel
adapters/repos/schema/: BUILD.bazel
client/: BUILD.bazel
client/backups/: BUILD.bazel
client/batch/: BUILD.bazel
client/classifications/: BUILD.bazel
client/graphql/: BUILD.bazel
client/meta/: BUILD.bazel
client/nodes/: BUILD.bazel
client/objects/: BUILD.bazel
client/operations/: BUILD.bazel
client/schema/: BUILD.bazel
client/well_known/: BUILD.bazel
cmd/weaviate-server/: BUILD.bazel
deprecations/: BUILD.bazel
entities/additional/: BUILD.bazel
entities/aggregation/: BUILD.bazel
entities/backup/: BUILD.bazel
entities/cyclemanager/: BUILD.bazel
entities/deepcopy/: BUILD.bazel
entities/diskio/: BUILD.bazel
entities/errorcompounder/: BUILD.bazel
entities/errors/: BUILD.bazel
entities/filters/: BUILD.bazel
entities/models/: BUILD.bazel
entities/modulecapabilities/: BUILD.bazel
entities/moduletools/: BUILD.bazel
entities/multi/: BUILD.bazel
entities/schema/: BUILD.bazel
entities/schema/crossref/: BUILD.bazel
entities/search/: BUILD.bazel
entities/searchparams/: BUILD.bazel
entities/storagestate/: BUILD.bazel
entities/storobj/: BUILD.bazel
entities/vectorindex/hnsw/: BUILD.bazel
modules/backup-filesystem/: BUILD.bazel
modules/backup-gcs/: BUILD.bazel
modules/backup-s3/: BUILD.bazel
modules/img2vec-neural/: BUILD.bazel
modules/img2vec-neural/clients/: BUILD.bazel
modules/img2vec-neural/ent/: BUILD.bazel
modules/img2vec-neural/nearImage/: BUILD.bazel
modules/img2vec-neural/vectorizer/: BUILD.bazel
modules/multi2vec-clip/: BUILD.bazel
modules/multi2vec-clip/clients/: BUILD.bazel
modules/multi2vec-clip/ent/: BUILD.bazel
modules/multi2vec-clip/nearImage/: BUILD.bazel
modules/multi2vec-clip/neartext/: BUILD.bazel
modules/multi2vec-clip/vectorizer/: BUILD.bazel
modules/ner-transformers/: BUILD.bazel
modules/ner-transformers/additional/: BUILD.bazel
modules/ner-transformers/clients/: BUILD.bazel
modules/ner-transformers/ent/: BUILD.bazel
modules/qna-openai/: BUILD.bazel
modules/qna-openai/additional/: BUILD.bazel
modules/qna-openai/ask/: BUILD.bazel
modules/qna-openai/clients/: BUILD.bazel
modules/qna-openai/config/: BUILD.bazel
modules/qna-openai/dependency/: BUILD.bazel
modules/qna-openai/ent/: BUILD.bazel
modules/qna-transformers/: BUILD.bazel
modules/qna-transformers/additional/: BUILD.bazel
modules/qna-transformers/ask/: BUILD.bazel
modules/qna-transformers/clients/: BUILD.bazel
modules/qna-transformers/dependency/: BUILD.bazel
modules/qna-transformers/ent/: BUILD.bazel
modules/ref2vec-centroid/: BUILD.bazel
modules/ref2vec-centroid/config/: BUILD.bazel
modules/ref2vec-centroid/vectorizer/: BUILD.bazel
modules/sum-transformers/: BUILD.bazel
modules/sum-transformers/additional/: BUILD.bazel
modules/sum-transformers/client/: BUILD.bazel
modules/sum-transformers/ent/: BUILD.bazel
modules/text-spellcheck/: BUILD.bazel
modules/text-spellcheck/additional/: BUILD.bazel
modules/text-spellcheck/clients/: BUILD.bazel
modules/text-spellcheck/ent/: BUILD.bazel
modules/text-spellcheck/transformer/: BUILD.bazel
modules/text2vec-cohere/: BUILD.bazel
modules/text2vec-cohere/additional/: BUILD.bazel
modules/text2vec-cohere/clients/: BUILD.bazel
modules/text2vec-cohere/ent/: BUILD.bazel
modules/text2vec-cohere/neartext/: BUILD.bazel
modules/text2vec-cohere/vectorizer/: BUILD.bazel
modules/text2vec-contextionary/: BUILD.bazel  helpers_test.go
modules/text2vec-contextionary/additional/: BUILD.bazel
modules/text2vec-contextionary/classification/: BUILD.bazel
modules/text2vec-contextionary/client/: BUILD.bazel
modules/text2vec-contextionary/concepts/: BUILD.bazel
modules/text2vec-contextionary/extensions/: BUILD.bazel
modules/text2vec-contextionary/neartext/: BUILD.bazel
modules/text2vec-contextionary/vectorizer/: BUILD.bazel
modules/text2vec-huggingface/: BUILD.bazel  module.go
modules/text2vec-huggingface/additional/: BUILD.bazel
modules/text2vec-huggingface/clients/: BUILD.bazel
modules/text2vec-huggingface/ent/: BUILD.bazel
modules/text2vec-huggingface/neartext/: BUILD.bazel
modules/text2vec-huggingface/vectorizer/: BUILD.bazel
modules/text2vec-openai/: BUILD.bazel  module.go
modules/text2vec-openai/additional/: BUILD.bazel
modules/text2vec-openai/clients/: BUILD.bazel
modules/text2vec-openai/ent/: BUILD.bazel
modules/text2vec-openai/neartext/: BUILD.bazel
modules/text2vec-openai/vectorizer/: BUILD.bazel
modules/text2vec-transformers/: BUILD.bazel
modules/text2vec-transformers/additional/: BUILD.bazel
test/benchmark/: BUILD.bazel
test/docker/: BUILD.bazel
test/helper/: BUILD.bazel
tools/license_headers/: BUILD.bazel
tools/release_template/: BUILD.bazel
usecases/backup/: BUILD.bazel
usecases/byte_operations/: BUILD.bazel
usecases/classification/: BUILD.bazel
usecases/cluster/: BUILD.bazel
usecases/config/: BUILD.bazel
usecases/connstate/: BUILD.bazel
usecases/floatcomp/: BUILD.bazel
usecases/locks/: BUILD.bazel
usecases/memwatch/: BUILD.bazel
usecases/modules/: BUILD.bazel
usecases/monitoring/: BUILD.bazel
usecases/nodes/: BUILD.bazel
usecases/objects/: BUILD.bazel
usecases/replica/: BUILD.bazel  coordinator.go  error.go  error_test.go  finder.go  finder_test.go  mocks_test.go  replicator.go  replicator_test.go  transport.go  transport_test.go
usecases/scaling/: BUILD.bazel
usecases/schema/: BUILD.bazel
usecases/sharding/: BUILD.bazel
usecases/traverser/: BUILD.bazel  explorer_test.go  fakes_for_test.go
usecases/vectorizer/: BUILD.bazel
(+106 files in other folders)
