load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "deprecations",
    srcs = [
        "data.go",
        "main.go",
    ],
    importpath = "github.com/marcussorealheis/weaviate/deprecations",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/models:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
