load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "nodes",
    srcs = [
        "nodes_client.go",
        "nodes_get_parameters.go",
        "nodes_get_responses.go",
    ],
    importpath = "github.com/marcussorealheis/weaviate/client/nodes",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//client:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/models:go_default_library",
    ],
)
