load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "objects",
    srcs = [
        "objects_class_delete_parameters.go",
        "objects_class_delete_responses.go",
        "objects_class_get_parameters.go",
        "objects_class_get_responses.go",
        "objects_class_head_parameters.go",
        "objects_class_head_responses.go",
        "objects_class_patch_parameters.go",
        "objects_class_patch_responses.go",
        "objects_class_put_parameters.go",
        "objects_class_put_responses.go",
        "objects_class_references_create_parameters.go",
        "objects_class_references_create_responses.go",
        "objects_class_references_delete_parameters.go",
        "objects_class_references_delete_responses.go",
        "objects_class_references_put_parameters.go",
        "objects_class_references_put_responses.go",
        "objects_client.go",
        "objects_create_parameters.go",
        "objects_create_responses.go",
        "objects_delete_parameters.go",
        "objects_delete_responses.go",
        "objects_get_parameters.go",
        "objects_get_responses.go",
        "objects_head_parameters.go",
        "objects_head_responses.go",
        "objects_list_parameters.go",
        "objects_list_responses.go",
        "objects_patch_parameters.go",
        "objects_patch_responses.go",
        "objects_references_create_parameters.go",
        "objects_references_create_responses.go",
        "objects_references_delete_parameters.go",
        "objects_references_delete_responses.go",
        "objects_references_update_parameters.go",
        "objects_references_update_responses.go",
        "objects_update_parameters.go",
        "objects_update_responses.go",
        "objects_validate_parameters.go",
        "objects_validate_responses.go",
    ],
    importpath = "github.com/marcussorealheis/weaviate/client/objects",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//client:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/models:go_default_library",
    ],
)
