load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "well_known",
    srcs = [
        "get_well_known_openid_configuration_parameters.go",
        "get_well_known_openid_configuration_responses.go",
        "well_known_client.go",
    ],
    importpath = "github.com/marcussorealheis/weaviate/client/well_known",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_runtime//:go_default_library",
        "@com_github_go_openapi_runtime//client:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/models:go_default_library",
    ],
)
