load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "additional",
    srcs = [
        "classification.go",
        "distance.go",
        "replication.go",
    ],
    importpath = "github.com/marcussorealheis/weaviate/entities/additional",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_openapi_strfmt//:go_default_library"],
)
