load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "filters",
    srcs = [
        "analtyics_props.go",
        "consts.go",
        "filters.go",
        "filters_validator.go",
        "pagination.go",
        "path.go",
        "sort.go",
        "sort_validator.go",
    ],
    importpath = "github.com/marcussorealheis/weaviate/entities/filters",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/models:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/schema:go_default_library",
    ],
)

go_test(
    name = "filters_test",
    srcs = [
        "filter_validator_test.go",
        "filters_serialization_test.go",
        "filters_test.go",
        "pagination_test.go",
        "path_test.go",
    ],
    embed = [":filters"],
    deps = [
        "@com_github_semi_technologies_weaviate//entities/models:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/schema:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
