load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "additional_properties.go",
        "b_m25_config.go",
        "backup_create_request.go",
        "backup_create_response.go",
        "backup_create_status_response.go",
        "backup_restore_request.go",
        "backup_restore_response.go",
        "backup_restore_status_response.go",
        "batch_delete.go",
        "batch_delete_response.go",
        "batch_reference.go",
        "batch_reference_response.go",
        "c11y_extension.go",
        "c11y_nearest_neighbors.go",
        "c11y_vector.go",
        "c11y_vector_based_question.go",
        "c11y_words_response.go",
        "class.go",
        "classification.go",
        "classification_meta.go",
        "deprecation.go",
        "error_response.go",
        "geo_coordinates.go",
        "graph_q_l_error.go",
        "graph_q_l_queries.go",
        "graph_q_l_query.go",
        "graph_q_l_response.go",
        "graph_q_l_responses.go",
        "inverted_index_config.go",
        "json_object.go",
        "link.go",
        "meta.go",
        "multiple_ref.go",
        "node_shard_status.go",
        "node_stats.go",
        "node_status.go",
        "nodes_status_response.go",
        "object.go",
        "objects_get_response.go",
        "objects_list_response.go",
        "patch_document_action.go",
        "patch_document_object.go",
        "peer_update.go",
        "peer_update_list.go",
        "phone_number.go",
        "principal.go",
        "property.go",
        "property_schema.go",
        "reference_meta_classification.go",
        "replication_config.go",
        "schema.go",
        "schema_history.go",
        "shard_status.go",
        "shard_status_get_response.go",
        "shard_status_list.go",
        "single_ref.go",
        "stopword_config.go",
        "vector_weights.go",
        "where_filter.go",
        "where_filter_geo_range.go",
    ],
    importpath = "github.com/marcussorealheis/weaviate/entities/models",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
        "@com_github_go_openapi_validate//:go_default_library",
    ],
)
