load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "moduletools",
    srcs = [
        "config.go",
        "doc.go",
        "init_params.go",
        "object_diff.go",
        "storage.go",
    ],
    importpath = "github.com/marcussorealheis/weaviate/entities/moduletools",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_test(
    name = "moduletools_test",
    srcs = ["object_diff_test.go"],
    embed = [":moduletools"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
