load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storagestate",
    srcs = ["status.go"],
    importpath = "github.com/marcussorealheis/weaviate/entities/storagestate",
    visibility = ["//visibility:public"],
)

go_test(
    name = "storagestate_test",
    srcs = ["status_test.go"],
    embed = [":storagestate"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
