load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storobj",
    srcs = [
        "enrich_schema_datatypes.go",
        "errors.go",
        "parse_single_object.go",
        "storage_object.go",
    ],
    importpath = "github.com/marcussorealheis/weaviate/entities/storobj",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buger_jsonparser//:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/additional:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/errorcompounder:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/models:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/schema:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/search:go_default_library",
        "@com_github_semi_technologies_weaviate//usecases/byte_operations:go_default_library",
    ],
)

go_test(
    name = "storobj_test",
    srcs = ["storage_object_test.go"],
    embed = [":storobj"],
    deps = [
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/additional:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/models:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/schema:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
