load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "backup-filesystem",
    srcs = [
        "backup.go",
        "module.go",
    ],
    importpath = "github.com/marcussorealheis/weaviate/modules/backup-filesystem",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/backup:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/modulecapabilities:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/moduletools:go_default_library",
        "@com_github_semi_technologies_weaviate//usecases/monitoring:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "backup-filesystem_test",
    srcs = ["backup_test.go"],
    embed = [":backup-filesystem"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
