load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "backup-gcs",
    srcs = [
        "client.go",
        "module.go",
    ],
    importpath = "github.com/marcussorealheis/weaviate/modules/backup-gcs",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/backup:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/modulecapabilities:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/moduletools:go_default_library",
        "@com_github_semi_technologies_weaviate//usecases/monitoring:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go_storage//:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)
