load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "backup-s3",
    srcs = [
        "client.go",
        "config.go",
        "module.go",
    ],
    importpath = "github.com/marcussorealheis/weaviate/modules/backup-s3",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_minio_minio_go_v7//:go_default_library",
        "@com_github_minio_minio_go_v7//pkg/credentials:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/backup:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/modulecapabilities:go_default_library",
        "@com_github_semi_technologies_weaviate//entities/moduletools:go_default_library",
        "@com_github_semi_technologies_weaviate//usecases/monitoring:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
